# Airline-AI-Assistant

./: Airline_assistant.ipynb  Airline_assistant_final.ipynb  Airline_assistent.ipynb  DB Setup.ipynb  README.md  day3.ipynb  prices.db  pyproject.toml
