[project]
name = "project2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "diffusers>=0.37.1",
    "gradio>=6.14.0",
    "gtts>=2.5.4",
    "ipykernel>=7.2.0",
    "openai>=2.37.0",
    "pyttsx3>=2.99",
    "torch>=2.12.0",
    "transformers>=5.8.1",
]
